--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dist/**/*"
   ],
   "scripts": {
-    "postinstall": "(if-env RUN_PREPARE=1 && handpick --target=pursDependencies) || exit 0",
-    "prepare": "(if-env RUN_PREPARE=1 && spago build && node bundle.js && tsc --emitDeclarationOnly) || exit 0"
+    "postinstall": "(if-env NPM_ENV=1 && handpick --target=pursDependencies) || exit 0",
+    "prepare": "(if-env NPM_ENV=1 && spago build && node bundle.js && tsc --emitDeclarationOnly) || exit 0"
   },
   "dependencies": {
     "@emurgo/cardano-message-signing-browser": "1.0.1",
