--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "reconnecting-websocket": "4.4.0",
     "ts-unimplemented": "2.0.0",
     "uniqid": "5.4.0",
+    "uuid": "^8.3.2",
     "ws": "8.4.0",
     "xhr2": "0.2.1"
   },
