--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {
     "@emurgo/cardano-message-signing-browser": "1.0.1",
-    "@emurgo/cardano-serialization-lib-browser": "11.2.1",
+    "@emurgo/cardano-serialization-lib-nodejs": "^11.4.0",
+    "@mlabs-haskell/cardano-serialization-lib-gc-browser": "^1.0.6",
     "@mlabs-haskell/csl-gc-wrapper": "^1.0.1",
-    "@mlabs-haskell/json-bigint": "1.0.0",
+    "@mlabs-haskell/json-bigint": "2.0.0",
     "@noble/secp256k1": "^1.7.0",
     "apply-args-browser": "0.0.1",
     "base64-js": "^1.5.1",
@@ -23,20 +24,20 @@
     "bip39": "^3.1.0",
     "blakejs": "1.2.1",
     "bufferutil": "4.0.5",
-    "handpick": "7.1.1",
-    "if-env": "1.0.4",
     "jssha": "3.2.0",
     "puppeteer-core": "^15.3.2",
     "reconnecting-websocket": "4.4.0",
-    "ts-unimplemented": "2.0.0",
     "uniqid": "5.4.0",
-    "uuid": "^8.3.2",
+    "utf-8-validate": "^5.0.10",
     "ws": "8.4.0",
-    "xhr2": "0.2.1"
+    "xhr2": "0.2.1",
+    "handpick": "7.1.1",
+    "if-env": "1.0.4",
+    "ts-unimplemented": "2.0.0"
   },
   "devDependencies": {
     "@emurgo/cardano-message-signing-nodejs": "1.0.1",
-    "@emurgo/cardano-serialization-lib-nodejs": "11.2.1",
+    "@mlabs-haskell/cardano-serialization-lib-gc-nodejs": "^1.0.6",
     "apply-args-nodejs": "0.0.1",
     "buffer": "6.0.3",
     "doctoc": "^2.2.1",
@@ -48,9 +49,9 @@
   },
   "bundleDependencies": {
     "@emurgo/cardano-message-signing-browser": "1.0.1",
-    "@emurgo/cardano-serialization-lib-browser": "11.2.1",
+    "@mlabs-haskell/cardano-serialization-lib-gc-browser": "^1.0.6",
     "@mlabs-haskell/csl-gc-wrapper": "^1.0.1",
-    "@mlabs-haskell/json-bigint": "1.0.0",
+    "@mlabs-haskell/json-bigint": "2.0.0",
     "@noble/secp256k1": "^1.7.0",
     "apply-args-browser": "0.0.1",
     "base64-js": "^1.5.1",
@@ -62,7 +63,9 @@
     "jssha": "3.2.0",
     "puppeteer-core": "^15.3.2",
     "reconnecting-websocket": "4.4.0",
+    "ts-unimplemented": "2.0.0",
     "uniqid": "5.4.0",
+    "utf-8-validate": "^5.0.10",
     "ws": "8.4.0",
     "xhr2": "0.2.1",
     "esbuild": "0.18.11",
