--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "esbuild-plugin-polyfill-node": "^0.3.0",
     "esbuild-plugin-wasm": "^1.1.0",
     "http-server": "14.1.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "uuid": "^8.3.2"
   },
   "bundleDependencies": {
     "@emurgo/cardano-message-signing-browser": "1.0.1",
