--- a/package.json
+++ b/package.json
@@ -11,25 +11,24 @@
     "prepare": "(if-env NPM_ENV=1 && handpick --target=bundleDependencies && spago build && node ./bundle.js && tsc --emitDeclarationOnly && rm -r node_modules) || exit 0"
   },
   "dependencies": {
-    "@emurgo/cardano-message-signing-browser": "1.0.1",
-    "@emurgo/cardano-serialization-lib-nodejs": "^11.4.0",
-    "@mlabs-haskell/cardano-serialization-lib-gc-browser": "^1.0.6",
-    "@mlabs-haskell/csl-gc-wrapper": "^1.0.1",
+    "@mlabs-haskell/cardano-message-signing": "1.0.1",
+    "@mlabs-haskell/cardano-serialization-lib-gc": "^1.0.9",
     "@mlabs-haskell/json-bigint": "2.0.0",
+    "@mlabs-haskell/uplc-apply-args": "1.0.0",
     "@noble/secp256k1": "^1.7.0",
-    "apply-args-browser": "0.0.1",
     "base64-js": "^1.5.1",
-    "big-integer": "1.6.51",
     "bignumber.js": "^9.1.1",
     "bip39": "^3.1.0",
     "blakejs": "1.2.1",
     "bufferutil": "4.0.5",
+    "isomorphic-ws": "^5.0.0",
     "jssha": "3.2.0",
     "puppeteer-core": "^15.3.2",
     "reconnecting-websocket": "4.4.0",
     "uniqid": "5.4.0",
     "utf-8-validate": "^5.0.10",
-    "ws": "8.4.0",
+    "web-encoding": "^1.1.5",
+    "ws": "^8.16.0",
     "xhr2": "0.2.1",
     "handpick": "7.1.1",
     "if-env": "1.0.4",
