build: add docker images for frontend-api and delegate-server

--- a/package.json
+++ b/package.json
@@ -35,8 +35,6 @@
     "ts-unimplemented": "2.0.0"
   },
   "devDependencies": {
-    "@emurgo/cardano-message-signing-nodejs": "1.0.1",
-    "@mlabs-haskell/cardano-serialization-lib-gc-nodejs": "^1.0.6",
     "apply-args-nodejs": "0.0.1",
     "buffer": "6.0.3",
     "doctoc": "^2.2.1",
@@ -48,26 +46,28 @@
     "uuid": "^8.3.2"
   },
   "bundleDependencies": {
-    "@emurgo/cardano-message-signing-browser": "1.0.1",
-    "@mlabs-haskell/cardano-serialization-lib-gc-browser": "^1.0.6",
-    "@mlabs-haskell/csl-gc-wrapper": "^1.0.1",
+    "@mlabs-haskell/cardano-message-signing": "1.0.1",
+    "@mlabs-haskell/cardano-serialization-lib-gc": "^1.0.9",
     "@mlabs-haskell/json-bigint": "2.0.0",
+    "@mlabs-haskell/uplc-apply-args": "1.0.0",
     "@noble/secp256k1": "^1.7.0",
-    "apply-args-browser": "0.0.1",
     "base64-js": "^1.5.1",
-    "big-integer": "1.6.51",
     "bignumber.js": "^9.1.1",
     "bip39": "^3.1.0",
     "blakejs": "1.2.1",
     "bufferutil": "4.0.5",
+    "isomorphic-ws": "^5.0.0",
     "jssha": "3.2.0",
     "puppeteer-core": "^15.3.2",
     "reconnecting-websocket": "4.4.0",
-    "ts-unimplemented": "2.0.0",
     "uniqid": "5.4.0",
     "utf-8-validate": "^5.0.10",
-    "ws": "8.4.0",
+    "web-encoding": "^1.1.5",
+    "ws": "^8.16.0",
     "xhr2": "0.2.1",
+    "handpick": "7.1.1",
+    "if-env": "1.0.4",
+    "ts-unimplemented": "2.0.0",
     "esbuild": "0.18.11",
     "esbuild-plugin-polyfill-node": "^0.3.0",
     "esbuild-plugin-wasm": "^1.1.0",
