build(delegate_server): expose right ports in docker-compose

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 /demo/index.js
 /demo/node_modules/
 /plutip-env/payment.skey
-/*.sk
-/*.vk
-/*.addr
+/keys/*.sk
+/keys/*.vk
+/keys/*.addr
 /hydra-persist/
