--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-spago-packages.nix linguist-generated=true
+dist/** linguist-generated=true
 flake.lock linguist-generated=true
 package-lock.json linguist-generated=true
-demo/package-lock.json linguist-generated=true
+spago-packages.nix linguist-generated=true
