--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "hydra-auction-offchain",
   "version": "0.1.0",
+  "license": "Apache-2.0",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist/**/*"
   ],
-  "scripts": {
-    "prepare": "(if-env NPM_ENV=1 && handpick --target=bundleDependencies && spago build && node ./bundle.js && tsc --emitDeclarationOnly && rm -r node_modules) || exit 0"
-  },
-  "dependencies": {
+  "devDependencies": {
     "@mlabs-haskell/cardano-message-signing": "1.0.1",
     "@mlabs-haskell/cardano-serialization-lib-gc": "^1.0.9",
     "@mlabs-haskell/json-bigint": "2.0.0",
@@ -30,49 +28,13 @@
     "web-encoding": "^1.1.5",
     "ws": "^8.16.0",
     "xhr2": "0.2.1",
-    "handpick": "7.1.1",
-    "if-env": "1.0.4",
-    "ts-unimplemented": "2.0.0"
-  },
-  "devDependencies": {
-    "apply-args-nodejs": "0.0.1",
+    "ts-unimplemented": "2.0.0",
+    "uuid": "^8.3.2",
     "buffer": "6.0.3",
     "doctoc": "^2.2.1",
     "esbuild": "0.18.11",
     "esbuild-plugin-polyfill-node": "^0.3.0",
     "esbuild-plugin-wasm": "^1.1.0",
-    "http-server": "14.1.1",
-    "typescript": "5.0.4",
-    "uuid": "^8.3.2"
-  },
-  "bundleDependencies": {
-    "@mlabs-haskell/cardano-message-signing": "1.0.1",
-    "@mlabs-haskell/cardano-serialization-lib-gc": "^1.0.9",
-    "@mlabs-haskell/json-bigint": "2.0.0",
-    "@mlabs-haskell/uplc-apply-args": "1.0.0",
-    "@noble/secp256k1": "^1.7.0",
-    "base64-js": "^1.5.1",
-    "bignumber.js": "^9.1.1",
-    "bip39": "^3.1.0",
-    "blakejs": "1.2.1",
-    "bufferutil": "4.0.5",
-    "isomorphic-ws": "^5.0.0",
-    "jssha": "3.2.0",
-    "puppeteer-core": "^15.3.2",
-    "reconnecting-websocket": "4.4.0",
-    "uniqid": "5.4.0",
-    "utf-8-validate": "^5.0.10",
-    "web-encoding": "^1.1.5",
-    "ws": "^8.16.0",
-    "xhr2": "0.2.1",
-    "handpick": "7.1.1",
-    "if-env": "1.0.4",
-    "ts-unimplemented": "2.0.0",
-    "esbuild": "0.18.11",
-    "esbuild-plugin-polyfill-node": "^0.3.0",
-    "esbuild-plugin-wasm": "^1.1.0",
-    "purescript": "0.15.8",
-    "spago": "0.21.0",
     "typescript": "5.0.4"
   }
 }
