reinstate prepare script

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "files": [
     "dist/**/*"
   ],
+  "scripts": {
+    "prepare": "(if-env NPM_ENV=1 && handpick --target=bundleDependencies && spago build && node ./bundle.js && tsc --emitDeclarationOnly && rm -r node_modules) || exit 0"
+  },
   "devDependencies": {
     "@mlabs-haskell/cardano-message-signing": "1.0.1",
     "@mlabs-haskell/cardano-serialization-lib-gc": "^1.0.9",
