--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hydra-auction-offchain",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "license": "Apache-2.0",
   "type": "module",
   "main": "dist/index.js",
@@ -9,32 +9,31 @@
     "dist/**/*"
   ],
   "devDependencies": {
-    "@mlabs-haskell/cardano-message-signing": "1.0.1",
-    "@mlabs-haskell/cardano-serialization-lib-gc": "^1.0.9",
+    "@mlabs-haskell/cardano-message-signing": "^1.0.1",
+    "@mlabs-haskell/cardano-serialization-lib-gc": "12.0.0-alpha.31",
     "@mlabs-haskell/json-bigint": "2.0.0",
-    "@mlabs-haskell/uplc-apply-args": "1.0.0",
+    "@mlabs-haskell/uplc-apply-args": "1.0.29-alpha",
     "@noble/secp256k1": "^1.7.0",
     "base64-js": "^1.5.1",
     "bignumber.js": "^9.1.1",
     "bip39": "^3.1.0",
     "blakejs": "1.2.1",
-    "bufferutil": "4.0.5",
-    "isomorphic-ws": "^5.0.0",
-    "jssha": "3.2.0",
-    "puppeteer-core": "^15.3.2",
-    "reconnecting-websocket": "4.4.0",
-    "uniqid": "5.4.0",
-    "utf-8-validate": "^5.0.10",
-    "web-encoding": "^1.1.5",
-    "ws": "^8.16.0",
-    "xhr2": "0.2.1",
-    "ts-unimplemented": "2.0.0",
-    "uuid": "^8.3.2",
     "buffer": "6.0.3",
+    "bufferutil": "4.0.5",
     "doctoc": "^2.2.1",
     "esbuild": "0.18.11",
     "esbuild-plugin-polyfill-node": "^0.3.0",
     "esbuild-plugin-wasm": "^1.1.0",
-    "typescript": "5.0.4"
+    "isomorphic-ws": "^5.0.0",
+    "puppeteer-core": "^15.3.2",
+    "reconnecting-websocket": "4.4.0",
+    "ts-unimplemented": "2.0.0",
+    "typescript": "5.0.4",
+    "uniqid": "5.4.0",
+    "utf-8-validate": "^5.0.10",
+    "uuid": "^8.3.2",
+    "web-encoding": "^1.1.5",
+    "ws": "^8.16.0",
+    "xhr2": "0.2.1"
   }
 }
