--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
   ],
   "devDependencies": {
     "@mlabs-haskell/cardano-message-signing": "^1.0.1",
-    "@mlabs-haskell/cardano-serialization-lib-gc": "12.0.0-alpha.31",
+    "@mlabs-haskell/cardano-serialization-lib-gc": "12.0.0",
     "@mlabs-haskell/json-bigint": "2.0.0",
     "@mlabs-haskell/uplc-apply-args": "1.0.29-alpha",
     "@noble/secp256k1": "^1.7.0",
     "base64-js": "^1.5.1",
     "bignumber.js": "^9.1.1",
     "bip39": "^3.1.0",
-    "blakejs": "1.2.1",
-    "buffer": "6.0.3",
     "bufferutil": "4.0.5",
     "doctoc": "^2.2.1",
     "esbuild": "0.18.11",
