feat(delegate_server): implement auction slot reservation logic
- Add POST /reserveSlot endpoint that allows users to reserve slots for
  upcoming auctions

--- a/docker/delegate-server-nix/Dockerfile
+++ b/docker/delegate-server-nix/Dockerfile
@@ -1,4 +1,13 @@
 # syntax=docker/dockerfile:1
+
+FROM nixos/nix:latest AS hydra
+
+RUN git clone https://github.com/input-output-hk/hydra.git
+WORKDIR /hydra
+RUN git checkout 1ffe7c6b505e3f38b5546ae5e5b97de26bc70425
+RUN nix build .#hydra-node-static \
+  --extra-experimental-features "nix-command flakes" \
+  --accept-flake-config
  
 FROM node:18
 WORKDIR /app
@@ -17,8 +26,7 @@ COPY app/delegate-server app/delegate-server
 COPY protocol-parameters.json .
 RUN npx --no-install spago build
 
-RUN curl -LO https://github.com/input-output-hk/hydra/releases/download/0.19.0/hydra-x86_64-linux-0.19.0.zip
-RUN unzip -d /usr/local/bin/ hydra-x86_64-linux-0.19.0.zip
+COPY --from=hydra /hydra/result/bin/hydra-node /usr/local/bin/hydra-node
 RUN chmod +x /usr/local/bin/hydra-node
 
 ENTRYPOINT ["npx", "--no-install", "spago", "-q", "run", "--main", "DelegateServer.Main", "--exec-args"]
